Update build.dependencies.gradle for NextFTC

--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,9 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = "https://maven.rowanmcalpin.com/" }
+    maven { url = "https://maven.pedropathing.com/" } // Remove if you don't intend to use PedroPathing
+    maven { url = "https://maven.brott.dev/" } // Remove if you don't intend to use the FTC Dashboard (required if using PedroPathing)
     maven { url = "https://mymaven.bylazar.com/releases" }
 }
 
@@ -18,5 +21,9 @@ dependencies {
     implementation 'com.pedropathing:ftc:2.0.3'
     implementation 'com.pedropathing:telemetry:1.0.0'
     implementation 'com.bylazar:fullpanels:1.0.7'
+    implementation 'com.rowanmcalpin.nextftc:core:0.6.2'
+    implementation 'com.rowanmcalpin.nextftc:ftc:0.6.2'
+    implementation 'com.rowanmcalpin.nextftc:pedro:0.6.2' // Remove if you don't intend to use PedroPathing
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16' // Remove if you don't intend to use the FTC Dashboard (required if using PedroPathing)
 }
 
