--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation project(':FtcRobotController')
     implementation 'dev.nextftc:ftc:1.0.1'
     implementation 'dev.nextftc:hardware:1.0.1' // If you would like to use the hardware module
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'  //Pedro Extensions for NextFTC
     implementation 'org.ftclib.ftclib:vision:2.1.0' // vision
     implementation 'org.ftclib.ftclib:core:2.1.1' // core
 }
