--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.bylazar:fullpanels:1.0.7'
     implementation 'com.rowanmcalpin.nextftc:core:0.6.2'
     implementation 'com.rowanmcalpin.nextftc:ftc:0.6.2'
+    implementation 'dev.nextftc:bindings:1.0.1'
     implementation 'com.rowanmcalpin.nextftc:pedro:0.6.2' // Remove if you don't intend to use PedroPathing
     implementation 'dev.nextftc.extensions:pedro:1.0.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16' // Remove if you don't intend to use the FTC Dashboard (required if using PedroPathing)
